--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html> 
 <html lang="en">
     <head>
-        <title>Unaware Squad Meeting Minutes</title>
+        <title>Unaware Squad</title>
         <meta name = "notetaker" content = "Jordan Huynh"/>
         <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     </head>
+
+    <body>
+        <header>
+            <h1>Meeting Records</h1>
+            <b>Meeting No. 42</b><br><i>5/04/2077</i>
+            
+            <hr>
+
+            <h2>Navigation</h2>
+            <nav>
+                <a href = "#Summary">Summary</a> | <a href = "#Attendance">Attendance</a> | <a href = "#Start">Meeting</a>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <section><h3><a name = "Attendance"></a>Attendance</h3></section>
+                Absent:
+                <ul>
+                    <li>Jeremy</li>
+                    <li>Safira</li>
+                    <li>Tucker</li>
+                    <li>Grant</li>
+                </ul>
+            </article>
+
+            <article>
+                <section><h3><a name = "Start"></a>Start of Meeting</h3></section>
+                <p>Testing</p>
+            </article>
+
+            <article>
+                <section><h3><a name = "Summary"></a>Summary</h3></section>
+                <p>Testing</p>
+            </article>
+        </main>
+    </body>
+
+    <hr>
+
+    <footer>
+        <p>Notetaker: Joel Speen</p>
+        <p><em>Copyright</em> Unaware Squad Inc.</p>
+    </footer>
 </html>
