--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <section><h3><a name = "Attendance"></a>Attendance</h3></section>
                 Absent:
                 <ul>
-                    <li>Jeremy</li>
+                    <li><span style = "color:green"></span>Jeremy</li>
                     <li>Safira</li>
                     <li>Tucker</li>
                     <li>Grant</li>
