--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Unaware Squad</title>
-        <meta name = "notetaker" content = "Jordan Huynh"/>
-        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        <meta name = "notetaker" content = "Jordan Huynh">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
 
     <body>
@@ -21,13 +21,14 @@
         <main>
             <article>
                 <section><h3><a name = "Attendance"></a>Attendance</h3></section>
-                Absent:
+                <div>Absent:
                 <ul>
                     <li><span style = "color:green"></span>Jeremy</li>
                     <li>Safira</li>
                     <li>Tucker</li>
                     <li>Grant</li>
                 </ul>
+                </div>
             </article>
 
             <article>
@@ -42,9 +43,8 @@
         </main>
     </body>
 
-    <hr>
-
     <footer>
+        <hr>
         <p>Notetaker: Joel Speen</p>
         <p><em>Copyright</em> Unaware Squad Inc.</p>
     </footer>
