--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                 <p>New direction for project decided. <b>Addition input or ideas can be suggested in form at bottom of page.</b> Setting will be medieval fantasy in the same thread of Tolkien. Game will involve magic system of some sort though main gameplay style is still undecided.<br> 
                 <details>
                     <summary>Image Reference</summary>
-                    <img src = "Medieval.jpg">
+                    <img src = "Medieval.jpg" alt = "Medieval Town">
                 </details><br>
                 <details>
                     <summary>Music Reference | Baldur's Gate 3 - Down By the River (Instrumental)</summary>
                     <audio controls>
-                        <source src = "Baldur's Gate 3 OST - Down By The River (Instrumental).mp3" type = "audio/mpeg">
+                        <source src = "Ref_music.mp3" type = "audio/mpeg">
                         Your browser does not support the audio tag.
                     </audio>
                 </details><br>
                 <details>
                     <summary>Video Reference</summary>
                     <video controls>
-                        <source src = "Never thought I'd die fighting side by side with an Elf.mp4" type = "video/mp4">
+                        <source src = "Ref_vid.mp4" type = "video/mp4">
                     </video>
                 </details><br>
 
@@ -78,16 +78,16 @@
         <form action="/action_page.php">
             <fieldset>
                 <label for = "name">Name:</label>
-                <input type = "text", id = "name"><br><br>
+                <input type = "text" id = "name"><br><br>
 
                 <label for = "date">Today's Date:</label>
-                <input type = "date", id = "date"><br><br>
+                <input type = "date" id = "date"><br><br>
 
                 <label for = "attended">Did you attend this meeting?</label>
-                <input type = "checkbox", id = "attended"><br><br>
+                <input type = "checkbox" id = "attended"><br><br>
 
                 If yes, did you attend the entire meeting?<br>
-                <label for = "yes">Yes:</label> <input type = "radio", id = "yes"> <label for = "no">No:</label> <input type = "radio", id = "no"><br><br>
+                <label for = "yes">Yes:</label> <input type = "radio" id = "yes"> <label for = "no">No:</label> <input type = "radio" id = "no"><br><br>
 
                 <label for = "helpful">Was this meeting helpful?</label><br>
                 <select id = "helpful">
@@ -97,10 +97,10 @@
                 </select><br><br>
 
                 <label for = "suggestion">Suggestions:</label><br>
-                <textarea id = "suggestion", rows = "4", cols = "100">Write your suggestions here.</textarea><br><br>
+                <textarea id = "suggestion" rows = "4" cols = "100">Write your suggestions here.</textarea><br><br>
 
                 <label for = "team">Team:</label>
-                <input list = "teams", id = "team">
+                <input list = "teams" id = "team">
                 <datalist id = "teams">
                     <option value = "Audio">
                     <option value = "Art">
