--- a/index.html
+++ b/index.html
@@ -33,21 +33,20 @@
 
             <article>
                 <section><h3><a name = "Start"></a>Start of Meeting</h3></section>
-                <p>Meeting start with overview of last meeting. Discussion on new title <strong>Big Chungus</strong>. Review of work completed since last meeting. Senior level designer, Jeff Chan, to be named <i>Lead Designer</i>.<br>
-                    <br>
-                    Agenda:
-                    <ol>
-                        <li>Discuss timeline</li>
-                        <li>Review suggestions from last meeting</li>
-                        <li>Finalize theme and setting</li>
-                        <li>Compile references for design/art/music teams</li>
-                    </ol>
-                </p>
+                <p>Meeting start with overview of last meeting. Discussion on new title <strong>Big Chungus</strong>. Review of work completed since last meeting. Senior level designer, Jeff Chan, to be named <i>Lead Designer</i>.</p><br>
+                <br>
+                Agenda:
+                <ol>
+                    <li>Discuss timeline</li>
+                    <li>Review suggestions from last meeting</li>
+                    <li>Finalize theme and setting</li>
+                    <li>Compile references for design/art/music teams</li>
+                </ol>
             </article>
 
             <article>
                 <section><h3><a name = "Summary"></a>Summary</h3></section>
-                <p>New direction for project decided. <b>Addition input or ideas can be suggested in form at bottom of page.</b> Setting will be medieval fantasy in the same thread of Tolkien. Game will involve magic system of some sort though main gameplay style is still undecided.<br> 
+                <p>New direction for project decided. <b>Addition input or ideas can be suggested in form at bottom of page.</b> Setting will be medieval fantasy in the same thread of Tolkien. Game will involve magic system of some sort though main gameplay style is still undecided.</p><br> 
                 <details>
                     <summary>Image Reference</summary>
                     <img src = "Medieval.jpg" alt = "Medieval Town">
@@ -66,6 +65,7 @@
                     </video>
                 </details><br>
 
+                <p>
                 Recommendation made by lead developers to staff is to play games along the same thread as DnD and MMOs in order to gain better understanding of genre and ideas. Master document has been updated with additional information.
                 One on one meetings will be scheduled in the following days.
                 </p>
