--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         }
 
         ul.parent {
+            display: grid;
+            gap: 3px;
+            align-items: center;
+            justify-content: left;
+            grid-template-columns: 100%;
             text-align: left;
             border: 1pt solid white;
             border-radius: 5px;
@@ -84,6 +89,48 @@
             color: var(--blue);
         }
 
+        a[href = "#Attendance"] {
+            color: rgb(194, 181, 0);
+        }
+
+        a:hover {
+            background-color: #545454;
+        }
+
+        a:active {
+            color:#154578;
+        }
+
+        fieldset {
+            min-width: 60vw;
+            display: inline-block;
+        }
+
+        fieldset > #suggestion {
+            width: 50%;
+            background-color: gray;
+        }
+
+        label ~ button {
+            background-color: #639ad4;
+            border-radius: 5px;
+        }
+
+        label + #date {
+            background-color: gray;
+        }
+
+        .bold {
+            & > b {
+                color: rgb(149, 149, 255);
+            }
+        }
+
+        section:has(+ p) {
+            margin-top: 20px;
+            margin-bottom: 0px;
+        }
+
         #name {
             background-color: gray;
         }
@@ -100,11 +147,16 @@
             position: sticky;
             top: 0;
             background-color: #323438;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-content: center;
+            gap: 1%;
         }
 
         @media only screen and (max-device-width: 750px) {
             nav {
-                font-size: 2em;
+                font-size: 3em;
             }
         }
 
@@ -143,16 +195,16 @@
     <body>
         <header>
             <h1><span class="border center">Meeting Records</span></h1>
+            <img src="Quagsire_is_unaware.jpg" alt="logo" width = 80 height = 80 style="float: right">
             <b>Meeting No. 42</b><br>
-            <i>5/04/2077</i>
-            
+            <i>5/04/2077</i><br><br>
             <hr>
         </header>
         <main>
             <span class="center">
                 <h2>Navigation</h2>
                 <nav>
-                    <a href = "#Attendance">Attendance</a> | <a href = "#Start">Meeting</a> | <a href = "#Summary">Summary</a> | <a href = "#Form">Suggestion Form</a>
+                    <div><a href = "#Attendance">Attendance</a></div> | <div><a href = "#Start">Meeting</a></div> | <div><a href = "#Summary">Summary</a></div> | <a href = "#Form">Suggestion Form</a>
                 </nav>
             </span>
             <hr>
@@ -195,7 +247,7 @@
 
             <article>
                 <section><h3 class="summary"><a name = "Summary"></a>Summary</h3></section>
-                <p>New direction for project decided. <b>Addition input or ideas can be suggested in form at bottom of page.</b> Setting will be medieval fantasy in the same thread of Tolkien. Game will involve magic system of some sort though main gameplay style is still undecided.</p><br> 
+                <p class="bold">New direction for project decided. <b>Addition input or ideas can be suggested in form at bottom of page.</b> Setting will be medieval fantasy in the same thread of Tolkien. Game will involve magic system of some sort though main gameplay style is still undecided.</p><br> 
                 <details>
                     <summary>Image Reference</summary>
                     <img src = "Medieval.jpg" alt = "Medieval Town">
@@ -246,7 +298,7 @@
                 </select><br><br>
 
                 <label for = "suggestion">Suggestions:</label><br>
-                <textarea id = "suggestion" rows = "4" cols = "100">Write your suggestions here.</textarea><br><br>
+                <textarea id = "suggestion">Write your suggestions here.</textarea><br><br>
 
                 <label for = "team">Team:</label>
                 <input list = "teams" id = "team">
@@ -264,7 +316,7 @@
 
         <hr>
 
-        <footer style="position: sticky;">
+        <footer>
             <p>Notetaker: Joel Speen</p>
             <p><em>Copyright</em> Unaware Squad Inc.</p>
         </footer>
