--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
             background-color: #323438;
             color: #cfcfcf;
             font-family: "Open Sans", sans-serif;
-            font-optical-sizing: auto;
             font-weight: 300;
             font-style: normal;
             font-variation-settings:
-            "width" 100;
+            "wdth" 100;
         }
 
         h3.summary {
