--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             background-color: #323438;
             color: #cfcfcf;
             font-family: "Open Sans", sans-serif;
-            font-optical-sizing: auto;
             font-weight: 300;
             font-style: normal;
             font-variation-settings:
@@ -154,19 +153,19 @@
             gap: 1%;
         }
 
-        @media only screen and (max-device-width: 750px) {
+        @media only screen and (max-width: 750px) {
             nav {
                 font-size: 3em;
             }
         }
 
-        @media only screen and (max-device-width: 800px) and (min-device-width: 700px){
+        @media only screen and (max-width: 800px) and (min-width: 700px){
             nav {
                 font-size: 1.5em;
             }
         }
         
-        @media only screen and (max-device-width: 800px) {
+        @media only screen and (max-width: 800px) {
             ul.parent {
                 min-width: 400px;
                 padding: 10px 50px 10px 100px;
@@ -174,7 +173,7 @@
             } 
         }
 
-        @media only screen and (max-device-width: 800px) {
+        @media only screen and (max-width: 800px) {
             ol.parent {
                 min-width: 400px;
                 padding: 10px 50px 10px 100px;
