--- a/index.html
+++ b/index.html
@@ -1,190 +1,9 @@
 <!DOCTYPE html> 
-<html lang="en">
-    <style>
-        /*CSS for webpage*/
-
-        :root {
-            --blue: #639ad4;
-        }
-
-        body {
-            background-color: #323438;
-            color: #cfcfcf;
-            font-family: "Open Sans", sans-serif;
-            font-weight: 300;
-            font-style: normal;
-            font-variation-settings:
-            "wdth" 100;
-            line-height: 1.6;
-        }
-
-        h3.summary {
-            background-color: var(--blue, #639ad4);
-            color:black;
-            text-align: center;
-            margin-top: 1rem;
-            margin-right: 25%;
-            margin-bottom: 1rem;
-            margin-left: 25%;
-            border-radius: 5pt;
-        }
-
-        h3.start {
-            background-color: var(--blue, #639ad4);
-            color:black;
-            text-align: center;
-            margin: 1rem 25% 1rem 25%;
-            border-radius: 5pt;
-        }
-
-        .block, h1 {
-            border: 2px; 
-            border-style: solid; 
-            border-color: paleturquoise;
-            border-radius: 5px;
-        }
-
-        ul.parent {
-            display: grid;
-            gap: 3px;
-            align-items: center;
-            justify-content: left;
-            grid-template-columns: 100%;
-            text-align: left;
-            border: 1pt solid white;
-            border-radius: 5px;
-            margin: 1rem 87% 1rem 1rem;
-            padding-top: 10px;
-            padding-right: 1vw;
-            padding-bottom: 10px;
-            padding-left: 2.5vw;
-            min-width: 200px;
-            background-color: #545454; 
-        }
-
-        .em li {
-            font-size: 1em;
-            color: white;
-        }
-
-        ol.parent {
-            text-align:left;
-            border: 1pt solid white;
-            border-radius: 5px;
-            margin: 1rem 75% 1rem 1rem;
-            padding: 10px 50px 10px 50px;
-            background-color: #545454; 
-        }
-
-        .border {
-            display: block;
-        }
-
-        *.center {
-            text-align: center;
-        }
-    
-        a {
-            color: var(--blue);
-        }
-
-        a[href = "#Attendance"] {
-            color: rgb(194, 181, 0);
-        }
-
-        a:hover {
-            background-color: #545454;
-        }
-
-        a:active {
-            color:#154578;
-        }
-
-        fieldset {
-            min-width: 60vw;
-            display: inline-block;
-        }
-
-        fieldset > #suggestion {
-            width: 50%;
-            background-color: gray;
-        }
-
-        label ~ button {
-            background-color: #639ad4;
-            border-radius: 5px;
-        }
-
-        label + #date {
-            background-color: gray;
-        }
-
-        .bold {
-            & > b {
-                color: rgb(149, 149, 255);
-            }
-        }
-
-        section:has(+ p) {
-            margin-top: 20px;
-            margin-bottom: 0px;
-        }
-
-        #name {
-            background-color: gray;
-        }
-
-        hr {
-            height: 1mm;
-            width: 25em;
-            border: none;
-            background-color: white;
-        }
-
-        nav {
-            position: -webkit-sticky;
-            position: sticky;
-            top: 0;
-            background-color: #323438;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-content: center;
-            gap: 1%;
-        }
-
-        @media only screen and (max-width: 750px) {
-            nav {
-                font-size: 3em;
-            }
-        }
-
-        @media only screen and (max-width: 800px) and (min-width: 700px){
-            nav {
-                font-size: 1.5em;
-            }
-        }
-        
-        @media only screen and (max-width: 800px) {
-            ul.parent {
-                min-width: 400px;
-                padding: 10px 50px 10px 100px;
-                background-color: #545454; 
-            } 
-        }
-
-        @media only screen and (max-width: 800px) {
-            ol.parent {
-                min-width: 400px;
-                padding: 10px 50px 10px 100px;
-                background-color: #545454; 
-            } 
-        }
-    </style>    
-
+<html lang="en">   
     <head>
         <title>Unaware Squad</title>
         <meta name = "notetaker" content = "Jordan Huynh">
+        <link rel="stylesheet" href="mystyle.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
